not-used/objects/StateAndCountryPickList__mdt/StateAndCountryPickList__mdt.object-meta.xml
<CustomObject>
    <label>StateAndCountryPickList</label>
    <pluralLabel>StateAndCountryPickLists</pluralLabel>
</CustomObject>