not-used/objects/StateAndCountryPickList__mdt/fields/CountryFullName__c.field-meta.xml
<CustomField>
    <fullName>CountryFullName__c</fullName>
    <label>CountryFullName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
                <default>true</default>
                <label>United States</label>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>