not-used/objects/StateAndCountryPickList__mdt/fields/StateFullName__c.field-meta.xml
<CustomField>
    <fullName>StateFullName__c</fullName>
    <label>StateFullName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>